--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,5 +13,7 @@
 		<a href="/Ingrediients">Ингредиенты</a>
 		<a href="/products">Продукт</a>
 		<a href="/zakupkaSyria">Закупка сырья</a>
-	</body>
+		<a href="/ProdajaProdukcii">Продажа Продукции</a>
+				<a href="/production">Производство продукции</a>
+	</body>	
 </html>
