--- a/src/main/resources/templates/sec.html
+++ b/src/main/resources/templates/sec.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
@@ -6,8 +7,11 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/edinicaizmereniyas}" th:object="${edinicas}">
-    <label for="edin">Enter edinica: </label>
+<form th:method="POST" th:action="@{/api/v1/developers}" th:object="${doljnost}">
+<label for ="id">Enter id:</label>
+<input type="text" th:field="*{id}" id="id"/>
+</br>
+    <label for="edin">Enter Doljnost: </label>
     <input type="text" th:field="*{name}" id="edin"/>
     <br/>
     <input type="submit" value="Create!"/>
