--- a/src/main/resources/templates/budgetid.html
+++ b/src/main/resources/templates/budgetid.html
@@ -7,6 +7,7 @@
 <body>
 <p th:text="${budget.getId()}">VALUE</p>
 <p th:text="${budget.getBudget()}">VALUE</p>
+<p th:text="${budget.getPercent()}">VALUE</p>
 <a th:href="@{/budget/{id}/edit/(id=${budget.getId()})}"  >Update</a>
 <a href="/budget">Бюджет</a>
 </body>
