--- a/src/main/resources/templates/filter.html
+++ b/src/main/resources/templates/filter.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org" >
 <head>
-    <meta charset="UTF-8">
-    <title>Edit Syrie</title>
-    <style>
+<meta charset="UTF-8"/>
+<title> FIND SYRIE</title>
+<style>
 
 	body{
 		font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -53,37 +53,21 @@
 	}
 	</style>
 </head>
+	
 <body style="background-color: rgb(158, 195, 233);">
 <div class="fieldset">
-<form th:method="PATCH" th:action="@{/syriies/{id}(id=${syrie.getId()})}" th:object="${syrie}">
+<form th:method="GET" th:action="@{/filter/{id}(id=${budgets.getId()})}" th:object="${budgets}">
 <div class="raz">
-<label for ="id">Enter id:</label>
-<input type="text" th:field="*{id}" id="id"/>
-</br>
 </div>
-<div class="raz">
-    <label for="fio">Enter kolvo: </label>
-    <input type="text" th:field="*{kolvo}" id="fio"/>
-    <br/>
-</div>
-<div class="raz">
-    <label for="adres">Enter name:</label>
-    <input type="text" th:field="*{name}" id="adres"/>
-    </br>  
-</div>
-<div class="raz">
-     <label for="oklad">Enter summa:</label>
-    <input type="text" th:field="*{summa}" id="oklad"/>
-    </br>
-</div>
-   <label for="edin">Enter edinica:</label>
-    <select id="edin" th:field="*{edinica}">
-            <option th:each="user : ${edinica}"
+      <label for="edin2">Enter product:</label>
+   <select id="edin2" th:field="*{product}">
+            <option th:each="user : ${product}"
                     th:text="${user.getName()}"
                     th:value="${user.getId()}">
         </select>
-    </br>
-    <input type="submit" value="Update!"/>
+        </br>
+    <input type="submit" value="Find!"/>
 </form>
 </div>
+</body>
 </html>
